--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lexend+Deca:wght@100..900&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <title>Portfolio - Alexis Peñuñuri</title>
 </head>
 
@@ -25,15 +25,23 @@
       </a>
     </div>
     <nav>
+      <input type="checkbox" name="" id="cb-ham">
+      <div class="ham-btn">
+        <label for="cb-ham">
+          <span></span>
+          <span></span>
+          <span></span>
+        </label>
+      </div>
       <div class="nav-items" id="nav-items">
         <a href="#">About me</a>
         <a href="#">Projects</a>
         <a href="#">Experience</a>
         <a href="#">Contact</a>
       </div>
-      <div class="ham-menu" id="ham-menu">
+      <!-- <div class="ham-menu" id="ham-menu">
         <i class="fa-solid fa-bars" onclick="displayMenu()"></i>
-      </div>
+      </div> -->
     </nav>
   </header>
 
