--- a/index.html
+++ b/index.html
@@ -6,14 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/header.css">
+  <link rel="stylesheet" href="./css/sections.css">
   <link rel="stylesheet" href="./css/responsive.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Alata&family=Lexend+Deca:wght@100..900&display=swap"
     rel="stylesheet">
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-    integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
   <title>Portfolio - Alexis Peñuñuri</title>
 </head>
 
@@ -39,25 +37,40 @@
         <a href="#">Experience</a>
         <a href="#">Contact</a>
       </div>
-      <!-- <div class="ham-menu" id="ham-menu">
-        <i class="fa-solid fa-bars" onclick="displayMenu()"></i>
-      </div> -->
     </nav>
   </header>
 
   <main>
-    <h1>This is a title style (H1)</h1>
-    <h2>This is a subtitle style (H2)</h2>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas suscipit amet minima tenetur commodi delectus
-      culpa quis, voluptatibus autem tempore tempora. Earum officia accusamus nihil! Consectetur eveniet repellat libero
-      ea.
-      Est illo quaerat expedita dolor, debitis odio veritatis nostrum amet voluptatibus magnam enim ducimus, adipisci
-      molestiae! Repellendus voluptates blanditiis veniam, adipisci reiciendis vel earum maxime. Eligendi repellat atque
-      molestiae reiciendis!</p>
+    <section class="about-section">
+      <div class="main-img">
+        <img src="./img/logo.png" alt="Logo">
+      </div>
+      <div class="dev-info-container">
+        <div class="dev-info">
+          <h2>WELCOME, I AM ALEXIS</h2>
+          <h3>Job role title</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem consequuntur tenetur, ratione quo autem
+            ipsum nulla consequatur culpa consectetur placeat, eveniet dolores nam, deserunt unde ab nemo sapiente sit
+            qui.</p>
+        </div>
+        <div class="dev-skills">
+          <h3>My skills</h3>
+          <div class="skills">
+            <p>SKILL</p>
+            <p>SKILL</p>
+            <p>SKILL</p>
+            <p>SKILL</p>
+            <p>TECH</p>
+            <p>TECH</p>
+            <p>TECH</p>
+            <p>TECH</p>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <footer></footer>
-  <script src="./js/index.js"></script>
 </body>
 
 </html>
